--- a/Messenger/frontend/public/twitter_app/components/base.html
+++ b/Messenger/frontend/public/twitter_app/components/base.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <title>Messenger</title>
     <!-- Импортируем стили -->
-    <link rel="icon" href="{% static 'src/assets/img/home/icon.png' %}">
-    <link rel="stylesheet" href="{% static 'src/assets/css/home/main.css' %}">
+    <link rel="icon" href="{% static 'src/twitter_app/assets/img/home/icon.png' %}">
+    <link rel="stylesheet" href="{% static 'src/twitter_app/assets/css/home/main.css' %}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <!-- Импортируем скрипты -->
 
-    <script src="{% static 'src/assets/js/home/pre-launch_scripts.js' %}"></script>
+    <script src="{% static 'src/twitter_app/assets/js/home/pre-launch_scripts.js' %}"></script>
 
 </head>
 <body>
@@ -25,8 +25,8 @@
     {% endblock %}
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.5.17/dist/vue.js"></script>
-    <script type="module" src="{% static 'src/main.js' %}"></script>
+    <script type="module" src="{% static 'src/twitter_app/main.js' %}"></script>
 
-    <script src="{% static 'src/assets/js/home/main.js' %}"></script>
+    <script src="{% static 'src/twitter_app/assets/js/home/main.js' %}"></script>
 </body>
 </html>
