--- a/Messenger/frontend/src/todo_app/assets/css/main/style.css
+++ b/Messenger/frontend/src/todo_app/assets/css/main/style.css
@@ -3,7 +3,10 @@
     margin: 0;
     font-family: 'Roboto', sans-serif;
 }
-
+a {
+    text-decoration: none;
+    color: white;
+}
 body {
     width: 100vw;
     height: 100vh;
