--- a/Messenger/frontend/public/twitter_app/components/base.html
+++ b/Messenger/frontend/public/twitter_app/components/base.html
@@ -15,7 +15,7 @@
     <script src="{% static 'src/twitter_app/assets/js/home/pre-launch_scripts.js' %}"></script>
 
 </head>
-<body>
+<body style="overflow-x: hidden">
 
 
 
