--- a/Messenger/frontend/src/twitter_app/assets/css/home/main.css
+++ b/Messenger/frontend/src/twitter_app/assets/css/home/main.css
@@ -145,13 +145,15 @@ a {
     border-left: 1px solid rgba(0, 0, 0, 0.100);
     top: 0;
     height: calc(50px - 30px);
-    width: calc(40% - 30px);
+    width: calc(40% + 21px);
     padding: 15px 19px;
     background-color: #fff;
     font-size: 20px;
     font-weight: 600;
     z-index: 1000;
     opacity: .95;
+    display: flex;
+    align-items: center;
 }
 
 .content {
