--- a/Messenger/frontend/public/twitter_app/components/left-menu.html
+++ b/Messenger/frontend/public/twitter_app/components/left-menu.html
@@ -1,59 +1,61 @@
 {% load static %}
-
 <section class="left-menu">
-            <div class="menu-elem-icon">
-                <div class="menu-elem-active-icon">
-                    <img src="{% static 'src/twitter_app/assets/img/home/icon.png' %}" alt="">
-                </div>
-            </div>
-            <div class="menu-elem">
-                <div class="menu-elem-active active-page">
-                    <img src="{% static 'src/twitter_app/assets/img/home/home.png' %}" alt="">
-                    <span>Home</span>
-                </div>
-            </div>
-            <div class="menu-elem">
-                <div class="menu-elem-active">
-                    <img src="{% static 'src/twitter_app/assets/img/home/explore.png' %}" alt="">
-                    <span>Explore</span>
-                </div>
-            </div>
-            <div class="menu-elem">
-                <div class="menu-elem-active">
-                    <img src="{% static 'src/twitter_app/assets/img/home/notification.png' %}" alt="">
-                    <span>Notifications</span>
-                </div>
-            </div>
-            <div class="menu-elem">
-                <div class="menu-elem-active">
-                    <img src="{% static 'src/twitter_app/assets/img/home/messages.png' %}" alt="">
-                    <span>Messages</span>
-                </div>
-            </div>
-            <div class="menu-elem">
-                <div class="menu-elem-active">
-                    <img src="{% static 'src/twitter_app/assets/img/home/bookmark.png' %}" alt="">
-                    <span>Bookmark</span>
-                </div>
-            </div>
-            <div class="menu-elem">
-                <div class="menu-elem-active">
-                    <img src="{% static 'src/twitter_app/assets/img/home/list.png' %}" alt="">
-                    <span>Lists</span>
-                </div>
-            </div>
-            <div class="menu-elem">
-                <div class="menu-elem-active">
-                    <img src="{% static 'src/twitter_app/assets/img/home/profile.png' %}" alt="">
-                    <span>Profile</span>
-                </div>
-            </div>
-            <div class="menu-elem">
-                <div class="menu-elem-active">
-                    <img src="{% static 'src/twitter_app/assets/img/home/more.png' %}" alt="">
-                    <span>More</span>
-                </div>
-            </div>
+    <div class="menu-elem-icon">
+        <div class="menu-elem-active-icon">
+            <img src="{% static 'img/home/icon.png' %}" alt="">
+        </div>
+    </div>
+    <div class="menu-elem">
+        <div class="menu-elem-active active-page">
+            <img src="{% static 'img/home/home.png' %}" alt="">
+            <span>Home</span>
+        </div>
+    </div>
+    <div class="menu-elem">
+        <div class="menu-elem-active">
+            <img src="{% static 'img/home/explore.png' %}" alt="">
+            <span>Explore</span>
+        </div>
+    </div>
+    <div class="menu-elem">
+        <div class="menu-elem-active">
+            <img src="{% static 'img/home/notification.png' %}" alt="">
+            <span>Notifications</span>
+        </div>
+    </div>
+    <div class="menu-elem">
+        <div class="menu-elem-active">
+            <img src="{% static 'img/home/messages.png' %}" alt="">
+            <span>Messages</span>
+        </div>
+    </div>
+    <div class="menu-elem">
+        <div class="menu-elem-active">
+            <img src="{% static 'img/home/bookmark.png' %}" alt="">
+            <span>Bookmark</span>
+        </div>
+    </div>
+    <div class="menu-elem">
+        <div class="menu-elem-active">
+            <img src="{% static 'img/home/list.png' %}" alt="">
+            <span>Lists</span>
+        </div>
+    </div>
+    <div class="menu-elem">
+        <div class="menu-elem-active">
+            <img src="{% static 'img/home/profile.png' %}" alt="">
+            <span>Profile</span>
+        </div>
+    </div>
+    <div class="menu-elem">
+        <div class="menu-elem-active">
+            <img src="{% static 'img/home/more.png' %}" alt="">
+            <span>More</span>
+        </div>
+    </div>
 
-            <button class="menu_new_tweet">Tweet</button>
-        </section>
+    <button class="menu_new_tweet">Tweet</button>
+</section>
+<style>
+
+</style>
