--- a/Messenger/frontend/src/assets/css/home/main.css
+++ b/Messenger/frontend/src/assets/css/home/main.css
@@ -5,28 +5,76 @@
 }
 body {
     width: 100vw;
-    height: 100vh;
+    min-height: 100vh;
+    height: auto;
     display: flex;
     justify-content: center;
 }
 
-main {
+
+.home-page {
+    width: 70%;
+    height: auto;
+    min-height: 100vh;
+    display: flex;
+}
+.main {
+    width: 40%;
+    height: auto;
+    min-height: 100vh;
+    padding-top: 50px;
+    border-left: 1px solid rgba(0, 0, 0, 0.100);
+    border-right: 1px solid rgba(0, 0, 0, 0.100);
     position: relative;
-    width: 85%;
-    height: 100%;
 }
 
-a {
-    text-decoration: none;
-    color: black;
+.main .top-menu {
+    position: fixed;
+    width: 100%;
+    top: 0;
+    font-size: 18px;
+    font-weight: 700;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.100);
+    margin-left: -15px;
+    padding-left: 15px;
 }
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* Левое меню */
 
 .left-menu {
     position: fixed;
     /* left: 0; */
     top: 0;
-    width: calc(22%);
+    max-width: calc(20%);
+    width: calc(20%);
     height: calc(100vw);
     padding: 15px 0;
     color: rgb(78, 78, 78);
@@ -102,7 +150,7 @@ a {
     -webkit-transition: background .4s;
     -o-transition: background .4s;
     -ms-transition: background .4s;
-    transition: background .4s;  
+    transition: background .4s;
 }
 .left-menu .menu-elem-active-icon:hover {
     background: #e8f5fd;
@@ -112,7 +160,7 @@ a {
 
 .left-menu .menu_new_tweet {
     padding: 18px 0;
-    width: 250px;
+    width: 70%;
     background-color: rgb(29, 155, 240);
     color: white;
     border: 0;
@@ -130,135 +178,27 @@ a {
     color: black !important;
 }
 
-.main {
-    position: relative;
-    width: 48%;
-    margin-left: 22%;
-    padding-top: 50px;
-    border-left: 1px solid rgba(0, 0, 0, 0.100);
-    border-right: 1px solid rgba(0, 0, 0, 0.100);
-    min-height: calc(100% - 55px);
-}
-.top-menu {
+
+
+
+
+.right-menu {
+    border-right: 1px solid black;
     position: fixed;
-    margin-left: 20%;
-    border-left: 1px solid rgba(0, 0, 0, 0.100);
+    /* left: 0; */
     top: 0;
-    height: calc(50px - 30px);
-    width: calc(40% + 21px);
-    padding: 15px 19px;
-    background-color: #fff;
-    font-size: 20px;
-    font-weight: 600;
-    z-index: 1000;
-    opacity: .95;
-    display: flex;
-    align-items: center;
-}
-
-.content {
-    width: calc(100% - 40px);
-}
-.content .new_tweet {
-    display: flex;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.100);
-    padding-bottom: 10px;
-    padding: 15px 19px;
-    width: 100%;
-}
-.content .new_tweet .profile {
-    width: 55px;
-    height: 50px;
-    font-size: 24px;
-    color: white;
-    background-color: #455a64;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border: 0;
-    border-radius: 90px;
-}
-.content .new_tweet .profile:hover {
-    -webkit-filter: brightness(70%);
-    -webkit-transition: all .5s ease;
-    -moz-transition: all .5s ease;
-    -o-transition: all .5s ease;
-    -ms-transition: all .5s ease;
-    transition: all .5s ease;
-    cursor: pointer;
-
-}
-.content .new_tweet textarea{
-    font-size: 18px;
-    padding: 20px;
-    font-size: 20px;
-    resize: none;
-    width: calc(100% - 80px);
-    height: min-content;
-    display: inline-table;
-    border: 0;
-    outline:none;
-    
-}
-.content .new_tweet form {
-    width: 100%;
-}
-.content .new_tweet form input {
-    padding: 10px 20px;
-    font-size: 15px;
-    background-color: rgb(29, 155, 240);
-    color: white;
-    /* opacity: .5; */
-    float: right;
-    border:0;
-    border-radius: 90px;
-    margin-top: 10px;
-}
-
-.content .new_tweet form input:hover {
-    -webkit-filter: brightness(90%);
-    -webkit-transition: all .5s ease;
-    -moz-transition: all .5s ease;
-    -o-transition: all .5s ease;
-    -ms-transition: all .5s ease;
-    transition: all .5s ease;
-}
-
-.main .content .tweets {
-    width: 100%;
-    height: auto;
-    
-
-}
-
-.main .content .tweets .tweet {
-    width: 100%;
-    height: auto;
-    /* border-top: 1px solid rgba(0, 0, 0, 0.100); */
-    border-bottom: 1px solid rgba(0, 0, 0, 0.100);
-    padding: 15px 19px;
-    background: white;
-    -moz-transition: background .4s;
-    -webkit-transition: background .4s;
-    -o-transition: background .4s;
-    -ms-transition: background .4s;
-    transition: background .4s;
-}
-
-.main .content .tweets .tweet:hover {
-    background: #f8f8f8;
-}
-
-.main .content .tweets .tweet-content {
-    width: 100%;
+    max-width: calc(20%);
+    width: calc(20%);
+    height: calc(100vw);
+    padding: 15px 0;
 }
 
 
 
-.main .content .tweets .tweet-content img {
-    width: 15px;
-    height: 15px;
-    
+@media (max-width: 1400px) {
+    .home-page {
+        width: 90%;
+    }
 }
 
 
@@ -266,83 +206,233 @@ a {
 
 
 
-.tweet {
-    display: flex;
-}
-.tweet .logo {
-    width: 50px;
-    min-width: 50px;
-    min-height: 50px;
-    height: 50px;
-    font-size: 24px;
-    color: white;
-    background-color: #455a64;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border: 0;
-    border-radius: 90px;
-    margin-right: 10px;
-}
-.tweet .logo:hover {
-    cursor: pointer;
-    -webkit-filter: brightness(70%);
-    -webkit-transition: all .5s ease;
-    -moz-transition: all .5s ease;
-    -o-transition: all .5s ease;
-    -ms-transition: all .5s ease;
-    transition: all .5s ease;
-}
-.tweet-content .tweet-actions-top img {
-    margin-right: 10px;
-    /* margin-top: 2px; */
-    float: right;
-}
-.tweet-content .tweet-actions-top img:hover {
-    background-color: #e1eef6;
-    cursor: pointer;
-}
-.tweet-content .tweet-actions-top .close-tweet {
-    padding: 5px;
-    border: 0;
-    border-radius: 90px;
-    width: 18px;
-    height: 18px;
-    float: right;
-}
-.tweet-content .tweet-text {
-    margin-top: 7px;
-}
-.tweet-content .tweet-actions-top .tweet-author-nickname {
-    color: black;
-    text-decoration: none;
-}
-.tweet-content .tweet-actions-top .tweet-author-nickname:hover {
-    text-decoration: underline;
-}
-.tweet-content .tweet-actions-bottom {
-    display: flex;
-    align-items: center;
-    margin-top: 10px;
-}
-/*.tweet-content .tweet-actions-bottom img {
-     padding: 5px;
-    border: 0px;
-    border-radius: 60px;
-}*/
-.tweet-content .tweet-actions-bottom img:hover {
-    cursor: pointer;
-    /* background-color: #e1eef6; */
-}
-.tweet-content .tweet-actions-bottom .tweet-likes {
-    font-size: 14px;
-    margin-left:5px ;
-}
+/*main {*/
+/*    position: relative;*/
+/*    width: 85%;*/
+/*    height: 100%;*/
+/*}*/
 
-.delete_a {
-    float: right;
-}
+/*a {*/
+/*    text-decoration: none;*/
+/*    color: black;*/
+/*}*/
 
-.like_a {
-    margin-right: 5px;
-}
+
+
+
+/*!*.main {*!*/
+/*!*    position: relative;*!*/
+/*!*    width: 48%;*!*/
+/*!*    margin-left: 22%;*!*/
+/*!*    padding-top: 50px;*!*/
+/*!*    border-left: 1px solid rgba(0, 0, 0, 0.100);*!*/
+/*!*    border-right: 1px solid rgba(0, 0, 0, 0.100);*!*/
+/*!*    min-height: calc(100% - 55px);*!*/
+/*!*}*!*/
+/*.top-menu {*/
+/*    position: fixed;*/
+/*    margin-left: 20%;*/
+/*    border-left: 1px solid rgba(0, 0, 0, 0.100);*/
+/*    top: 0;*/
+/*    height: calc(50px - 30px);*/
+/*    width: calc(40% + 21px);*/
+/*    padding: 15px 19px;*/
+/*    background-color: #fff;*/
+/*    font-size: 20px;*/
+/*    font-weight: 600;*/
+/*    z-index: 1000;*/
+/*    opacity: .95;*/
+/*    display: flex;*/
+/*    align-items: center;*/
+/*}*/
+
+/*.content {*/
+/*    width: calc(100% - 40px);*/
+/*}*/
+/*.content .new_tweet {*/
+/*    display: flex;*/
+/*    border-bottom: 1px solid rgba(0, 0, 0, 0.100);*/
+/*    padding-bottom: 10px;*/
+/*    padding: 15px 19px;*/
+/*    width: 100%;*/
+/*}*/
+/*.content .new_tweet .profile {*/
+/*    width: 55px;*/
+/*    height: 50px;*/
+/*    font-size: 24px;*/
+/*    color: white;*/
+/*    background-color: #455a64;*/
+/*    display: flex;*/
+/*    align-items: center;*/
+/*    justify-content: center;*/
+/*    border: 0;*/
+/*    border-radius: 90px;*/
+/*}*/
+/*.content .new_tweet .profile:hover {*/
+/*    -webkit-filter: brightness(70%);*/
+/*    -webkit-transition: all .5s ease;*/
+/*    -moz-transition: all .5s ease;*/
+/*    -o-transition: all .5s ease;*/
+/*    -ms-transition: all .5s ease;*/
+/*    transition: all .5s ease;*/
+/*    cursor: pointer;*/
+
+/*}*/
+/*.content .new_tweet textarea{*/
+/*    font-size: 18px;*/
+/*    padding: 20px;*/
+/*    font-size: 20px;*/
+/*    resize: none;*/
+/*    width: calc(100% - 80px);*/
+/*    height: min-content;*/
+/*    display: inline-table;*/
+/*    border: 0;*/
+/*    outline:none;*/
+/*    */
+/*}*/
+/*.content .new_tweet form {*/
+/*    width: 100%;*/
+/*}*/
+/*.content .new_tweet form input {*/
+/*    padding: 10px 20px;*/
+/*    font-size: 15px;*/
+/*    background-color: rgb(29, 155, 240);*/
+/*    color: white;*/
+/*    !* opacity: .5; *!*/
+/*    float: right;*/
+/*    border:0;*/
+/*    border-radius: 90px;*/
+/*    margin-top: 10px;*/
+/*}*/
+
+/*.content .new_tweet form input:hover {*/
+/*    -webkit-filter: brightness(90%);*/
+/*    -webkit-transition: all .5s ease;*/
+/*    -moz-transition: all .5s ease;*/
+/*    -o-transition: all .5s ease;*/
+/*    -ms-transition: all .5s ease;*/
+/*    transition: all .5s ease;*/
+/*}*/
+
+/*.main .content .tweets {*/
+/*    width: 100%;*/
+/*    height: auto;*/
+/*    */
+
+/*}*/
+
+/*.main .content .tweets .tweet {*/
+/*    width: 100%;*/
+/*    height: auto;*/
+/*    !* border-top: 1px solid rgba(0, 0, 0, 0.100); *!*/
+/*    border-bottom: 1px solid rgba(0, 0, 0, 0.100);*/
+/*    padding: 15px 19px;*/
+/*    background: white;*/
+/*    -moz-transition: background .4s;*/
+/*    -webkit-transition: background .4s;*/
+/*    -o-transition: background .4s;*/
+/*    -ms-transition: background .4s;*/
+/*    transition: background .4s;*/
+/*}*/
+
+/*.main .content .tweets .tweet:hover {*/
+/*    background: #f8f8f8;*/
+/*}*/
+
+/*.main .content .tweets .tweet-content {*/
+/*    width: 100%;*/
+/*}*/
+
+
+
+/*.main .content .tweets .tweet-content img {*/
+/*    width: 15px;*/
+/*    height: 15px;*/
+/*    */
+/*}*/
+
+
+
+
+
+
+/*.tweet {*/
+/*    display: flex;*/
+/*}*/
+/*.tweet .logo {*/
+/*    width: 50px;*/
+/*    min-width: 50px;*/
+/*    min-height: 50px;*/
+/*    height: 50px;*/
+/*    font-size: 24px;*/
+/*    color: white;*/
+/*    background-color: #455a64;*/
+/*    display: flex;*/
+/*    align-items: center;*/
+/*    justify-content: center;*/
+/*    border: 0;*/
+/*    border-radius: 90px;*/
+/*    margin-right: 10px;*/
+/*}*/
+/*.tweet .logo:hover {*/
+/*    cursor: pointer;*/
+/*    -webkit-filter: brightness(70%);*/
+/*    -webkit-transition: all .5s ease;*/
+/*    -moz-transition: all .5s ease;*/
+/*    -o-transition: all .5s ease;*/
+/*    -ms-transition: all .5s ease;*/
+/*    transition: all .5s ease;*/
+/*}*/
+/*.tweet-content .tweet-actions-top img {*/
+/*    margin-right: 10px;*/
+/*    !* margin-top: 2px; *!*/
+/*    float: right;*/
+/*}*/
+/*.tweet-content .tweet-actions-top img:hover {*/
+/*    background-color: #e1eef6;*/
+/*    cursor: pointer;*/
+/*}*/
+/*.tweet-content .tweet-actions-top .close-tweet {*/
+/*    padding: 5px;*/
+/*    border: 0;*/
+/*    border-radius: 90px;*/
+/*    width: 18px;*/
+/*    height: 18px;*/
+/*    float: right;*/
+/*}*/
+/*.tweet-content .tweet-text {*/
+/*    margin-top: 7px;*/
+/*}*/
+/*.tweet-content .tweet-actions-top .tweet-author-nickname {*/
+/*    color: black;*/
+/*    text-decoration: none;*/
+/*}*/
+/*.tweet-content .tweet-actions-top .tweet-author-nickname:hover {*/
+/*    text-decoration: underline;*/
+/*}*/
+/*.tweet-content .tweet-actions-bottom {*/
+/*    display: flex;*/
+/*    align-items: center;*/
+/*    margin-top: 10px;*/
+/*}*/
+/*!*.tweet-content .tweet-actions-bottom img {*/
+/*     padding: 5px;*/
+/*    border: 0px;*/
+/*    border-radius: 60px;*/
+/*}*!*/
+/*.tweet-content .tweet-actions-bottom img:hover {*/
+/*    cursor: pointer;*/
+/*    !* background-color: #e1eef6; *!*/
+/*}*/
+/*.tweet-content .tweet-actions-bottom .tweet-likes {*/
+/*    font-size: 14px;*/
+/*    margin-left:5px ;*/
+/*}*/
+
+/*.delete_a {*/
+/*    float: right;*/
+/*}*/
+
+/*.like_a {*/
+/*    margin-right: 5px;*/
+/*}*/
