--- a/Messenger/frontend/public/twitter_app/components/base.html
+++ b/Messenger/frontend/public/twitter_app/components/base.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <!-- Импортируем скрипты -->
 
     <script src="{% static 'js/home/pre-launch_scripts.js' %}"></script>
@@ -23,8 +24,6 @@
     {% block main %}
 
     {% endblock %}
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vue@2.5.17/dist/vue.js"></script>
     <script type="module" src="{% static 'src/twitter_app/main.js' %}"></script>
 
     <script src="{% static 'js/home/main.js' %}"></script>
