--- a/Messenger/frontend/public/twitter_app/components/left-menu.html
+++ b/Messenger/frontend/public/twitter_app/components/left-menu.html
@@ -7,55 +7,78 @@
     </div>
     <div class="menu-elem">
         <div class="menu-elem-active active-page">
-            <img src="{% static 'img/home/home.png' %}" alt="">
-            <span>Home</span>
+            <a href="{% url 'twitter_app:home'%}">
+                <img src="{% static 'img/home/home.png' %}" alt="">
+                <span>Home</span>
+            </a>
         </div>
     </div>
     <div class="menu-elem">
         <div class="menu-elem-active">
-            <img src="{% static 'img/home/explore.png' %}" alt="">
-            <span>Explore</span>
+            <a href="{% url 'twitter_app:explore'%}">
+                <img src="{% static 'img/home/explore.png' %}" alt="">
+                <span>Explore</span>
+            </a>
         </div>
     </div>
     <div class="menu-elem">
         <div class="menu-elem-active">
-            <img src="{% static 'img/home/notification.png' %}" alt="">
-            <span>Notifications</span>
+            <a href="">
+                <img src="{% static 'img/home/notification.png' %}" alt="">
+                <span>Notifications</span>
+            </a>
         </div>
     </div>
     <div class="menu-elem">
         <div class="menu-elem-active">
-            <img src="{% static 'img/home/messages.png' %}" alt="">
-            <span>Messages</span>
+            <a href="">
+                <img src="{% static 'img/home/messages.png' %}" alt="">
+                <span>Messages</span>
+            </a>
         </div>
     </div>
     <div class="menu-elem">
         <div class="menu-elem-active">
-            <img src="{% static 'img/home/bookmark.png' %}" alt="">
-            <span>Bookmark</span>
+            <a href="">
+                <img src="{% static 'img/home/bookmark.png' %}" alt="">
+                <span>Bookmark</span>
+            </a>
         </div>
     </div>
     <div class="menu-elem">
         <div class="menu-elem-active">
-            <img src="{% static 'img/home/list.png' %}" alt="">
-            <span>Lists</span>
+            <a href="">
+                <img src="{% static 'img/home/list.png' %}" alt="">
+                <span>Lists</span>
+            </a>
         </div>
     </div>
     <div class="menu-elem">
         <div class="menu-elem-active">
-            <img src="{% static 'img/home/profile.png' %}" alt="">
-            <span>Profile</span>
+            <a href="">
+                <img src="{% static 'img/home/profile.png' %}" alt="">
+                <span>Profile</span>
+            </a>
         </div>
     </div>
     <div class="menu-elem">
         <div class="menu-elem-active">
-            <img src="{% static 'img/home/more.png' %}" alt="">
-            <span>More</span>
+            <a href="">
+                <img src="{% static 'img/home/more.png' %}" alt="">
+                <span>More</span>
+            </a>
         </div>
     </div>
 
     <button class="menu_new_tweet">Tweet</button>
+    <div class="profile-bottom-in-menu" style=""></div>
 </section>
-<style>
 
+<style>
+.menu-elem-active a {
+    display: flex;
+    align-items: center;
+    color: black;
+    text-decoration: none;
+}
 </style>
